--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,10 @@
     </script>
     <!-- build:js js/all.js -->
     <script type="text/javascript" src="js/gl-matrix.custom.js"></script>
+    <script type="text/javascript" src="js/engine.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <!-- endbuild -->
-    <script type="text/javascript">startApp();</script>
+    <script type="text/javascript">startApp(init, render, updateData);</script>
 
 </body>
 </html>
