--- a/app/index.html
+++ b/app/index.html
@@ -14,19 +14,34 @@
     <script id="shader-fs" type="x-shader/x-fragment">
         precision mediump float;
 
+        varying vec3 vLighting;
+
         void main(void) {
-            gl_FragColor = vec4(0.5, 0.5, 0.5, 1.0);
+            vec4 textureColor = vec4(0.5, 0.5, 0.5, 1.0);
+            gl_FragColor = vec4(textureColor.rgb * vLighting, textureColor.a);
         }
     </script>
 
     <script id="shader-vs" type="x-shader/x-vertex">
         attribute vec3 aVertexPosition;
+        attribute vec3 aVertexNormal;
 
         uniform mat4 uMVMatrix;
         uniform mat4 uPMatrix;
 
+        varying vec3 vLighting;
+
         void main(void) {
             gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+
+            vec3 ambientLight = vec3(0.5, 0.5, 0.5);
+            vec3 directionalLightColor = vec3(0.5, 0.5, 0.5);
+            vec3 directionalVector = vec3(0.0, -1.0, 0.0);
+
+            vec4 transformedNormal = vec4(aVertexNormal, 1.0);
+
+            float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
+            vLighting = ambientLight + (directionalLightColor * directional);
         }
     </script>
     <!-- build:js js/all.js -->
