--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,12 @@
         precision mediump float;
 
         varying vec3 vLighting;
+        varying vec2 vTextureCoord;
+
+        uniform sampler2D uSampler;
 
         void main(void) {
-            vec4 textureColor = vec4(0.5, 0.5, 0.5, 1.0);
+            vec4 textureColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
             gl_FragColor = vec4(textureColor.rgb * vLighting, textureColor.a);
         }
     </script>
@@ -25,11 +28,13 @@
     <script id="shader-vs" type="x-shader/x-vertex">
         attribute vec3 aVertexPosition;
         attribute vec3 aVertexNormal;
+        attribute vec2 aTextureCoord;
 
         uniform mat4 uMVMatrix;
         uniform mat4 uPMatrix;
 
         varying vec3 vLighting;
+        varying vec2 vTextureCoord;
 
         void main(void) {
             gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
@@ -42,6 +47,7 @@
 
             float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
             vLighting = ambientLight + (directionalLightColor * directional);
+            vTextureCoord = aTextureCoord;
         }
     </script>
     <!-- build:js js/all.js -->
