fade death screen

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
 <body>
     <div id="canvas-container">
         <canvas id="canvas" width="800" height="600"></canvas>
+        <div class="overlay">
+        </div>
         <div class="menu menu-main">
             <h1>MineRoads</h1>
 
