upper collision + initial hud

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="canvas-container">
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <canvas id="canvas-gl" width="800" height="600"></canvas>
+        <canvas id="canvas-hud" width="800" height="600"></canvas>
         <div class="overlay">
         </div>
         <div class="menu menu-main">
