--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,12 @@
 
             <a href="#" class="menu-item menu-item-main">Go back</a>
         </div>
+        <div class="menu menu-over hidden">
+            <h1>Game Over</h1>
+
+            <a href="#" class="menu-item menu-item-start">Start new game</a>
+            <a href="#" class="menu-item menu-item-main">Go back</a>
+        </div>
     </div>
     </div>
     <script id="shader-fs" type="x-shader/x-fragment">
