--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,8 @@
 <body>
     <div id="canvas-container">
         <canvas id="canvas-gl" width="800" height="600"></canvas>
+        <div class="overlay"></div>
         <canvas id="canvas-hud" width="800" height="600"></canvas>
-        <div class="overlay">
-        </div>
         <div class="menu menu-main">
             <h1>MineRoads</h1>
 
