--- a/app/index.html
+++ b/app/index.html
@@ -74,11 +74,7 @@
             vTextureCoord = aTextureCoord;
         }
     </script>
-    <!-- build:js js/all.js -->
-    <script type="text/javascript" src="js/gl-matrix.custom.js"></script>
-    <script type="text/javascript" src="js/engine.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <!-- endbuild -->
+    <script type="text/javascript" src="js/all.js"></script>
     <script type="text/javascript">startApp(init, render, updateData);</script>
 
 </body>
